--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,11 @@
 html {
-  box-sizing: border-box;
   font-size: 10px;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body {
+  margin: 0;
+  box-sizing: border-box;
 }
 
 :root {
