--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,7 @@ body {
 
 :root {
   --black: #424242;
+  --dark-gray: #434341;
   --black-gray: #565654;
   --default-transition :0.3s;
   --white: #fff;
