add preview image

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,7 @@ body {
 :root {
   --black: #424242;
   --dark-gray: #434341;
+  --yellow: #F3C11C;
   --black-gray: #565654;
   --default-transition: 0.3s;
   --white: #fff;
